Major bug fixes by changing every GameController and MainController to their interfaces in RmiSocket, RmiClient and the socket messages