@@ -8,6 +8,7 @@ import it.polimi.ingsw.gc03.model.exceptions.CannotJoinGameException;
 import it.polimi.ingsw.gc03.model.exceptions.DeskIsFullException;
 import it.polimi.ingsw.gc03.model.exceptions.NoSuchGameException;
 import it.polimi.ingsw.gc03.model.exceptions.PlayerAlreadyJoinedException;
+import it.polimi.ingsw.gc03.networking.rmi.GameControllerInterface;
 import it.polimi.ingsw.gc03.networking.rmi.MainControllerInterface;
 
 import java.io.Serializable;
@@ -16,35 +17,15 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
 
-
-/**
- * Manages the lifecycle and interactions of multiple game sessions within the application.
- * This class follows the Singleton design pattern to ensure only one instance manages the game controllers globally.
- */
 public class MainController implements MainControllerInterface, Serializable {
 
-    /**
-     * Instance of the MainController, needed for the singleton design pattern.
-     */
     private static MainController instance = null;
-
-    /**
-     * List of GameController instances that manage the individual games within the application.
-     */
     private List<GameController> gameControllers;
 
-    /**
-     * Singleton's instance.
-     */
     private MainController() {
         gameControllers = new ArrayList<>();
     }
 
-
-    /**
-     * Retrieves the singleton instance of MainController, creating it if it does not exist.
-     * @return The singleton instance of MainController.
-     */
     public synchronized static MainController getInstance() {
         if (instance == null) {
             instance = new MainController();
@@ -52,54 +33,22 @@ public class MainController implements MainControllerInterface, Serializable {
         return instance;
     }
 
-    public synchronized boolean checkNicknameAvaiable(String nickname) {
-        for(GameController gameController : gameControllers) {
-            for(Player player: gameController.getGame().getPlayers()){
-                if(player.getNickname().equals(nickname)){
-                    return false;
-                }
-            }
-        }
-        return true;
-    }
 
-
-    /**
-     * Creates a new game and attempts to add the first player to it.
-     * @param gameListener The game listener of the first player.
-     * @param firstPlayerNickname The player who created the game.
-     * @return The created GameController.
-     * @throws RemoteException If there is an issue with remote communication.
-     */
-    public synchronized GameController createGame(GameListener gameListener, String firstPlayerNickname) throws RemoteException {
+    public synchronized GameControllerInterface createGame(GameListener gameListener, String firstPlayerNickname) throws RemoteException {
         try{
-            // Creates a new GameController, which will create an empty Game.
-        GameController controller = new GameController();
-        // add the controller to the list of controllers
-        gameControllers.add(controller);
-        // add the player to the newly created game and add his listener to every component and vice versa
-        joinSpecificGame(gameListener, firstPlayerNickname, controller.getGame().getIdGame());
-        return controller;
+            GameController controller = new GameController();
+            gameControllers.add(controller);
+            joinSpecificGame(gameListener, firstPlayerNickname, controller.getGame().getIdGame());
+            return controller;
         } catch (Exception e){
             System.out.println(e);
         }
         return null;
     }
 
-
-    /**
-     * Attempts to join a player to an available game that is waiting for players. If no such game exists, creates a
-     * new game.
-     * @param playerNickname The nickname of the player attempting to join a game.
-     * @param listener The game listener of the player.
-     * @return The GameController of the joined game.
-     * @throws RemoteException If there is an issue with remote communication.
-     */
-    public synchronized GameController joinFirstAvailableGame(GameListener listener, String playerNickname) throws RemoteException {
+    public synchronized GameControllerInterface joinFirstAvailableGame(GameListener listener, String playerNickname) throws RemoteException {
         try{
-            // joinGame will try to make the player join the first available game, if none exists, it will create a new game
             List<GameController> GCs = gameControllers.stream().filter(x -> (x.getGame().getStatus().equals(GameStatus.WAITING))).toList();
-            System.out.println("Adding player to "+GCs.getFirst().getGame().getIdGame());
             return addPlayerToGame(playerNickname, listener, GCs);
         } catch (Exception e){
             System.out.println(e);
@@ -107,19 +56,9 @@ public class MainController implements MainControllerInterface, Serializable {
         return null;
     }
 
-
-    /**
-     * Attempts to join a player to a specific game identified by its ID.
-     * @param listener The game listener of the player.
-     * @param playerNickname The nickname of the player attempting to join the game.
-     * @param id The ID of the game to join.
-     * @return The GameController of the joined game.
-     * @throws RemoteException If there is an issue with remote communication.
-     */
-    public synchronized GameController joinSpecificGame(  GameListener listener, String playerNickname, int id) throws RemoteException {
+    public synchronized GameControllerInterface joinSpecificGame(GameListener listener, String playerNickname, int id) throws RemoteException {
         try{
             List<GameController> GCs = gameControllers.stream().filter(x -> (x.getGame().getIdGame() == id)).toList();
-            System.out.println("Adding player to "+GCs.getFirst().getGame().getIdGame());
             return addPlayerToGame(playerNickname, listener, GCs);
         } catch (Exception e){
             System.out.println(e);
@@ -127,91 +66,55 @@ public class MainController implements MainControllerInterface, Serializable {
         return null;
     }
 
-
-    /**
-     * Adds a player to a game from a list of available games.
-     * @param playerNickname The nickname of the player to add.
-     * @param listener The game listener of the player.
-     * @param GCs The list of available GameController instances.
-     * @return The GameController of the game the player joined or created.
-     * @throws RemoteException If there is an issue with remote communication.
-     */
-    private GameController addPlayerToGame(String playerNickname, GameListener listener, List<GameController> GCs) throws RemoteException {
+    private GameControllerInterface addPlayerToGame(String playerNickname, GameListener listener, List<GameController> GCs) throws RemoteException {
         if(!GCs.isEmpty()) {
             try {
-                GCs.getFirst().addPlayerToGame(playerNickname, listener);
-                return gameControllers.get(0);
-            } catch (Exception e) {}
+                GCs.get(0).addPlayerToGame(playerNickname, listener);
+                return GCs.get(0);
+            } catch (Exception e) {
+                System.out.println(e);
+            }
         } else {
-            createGame(listener, playerNickname);
-            return gameControllers.getLast();
+            return createGame(listener, playerNickname);
         }
         return null;
     }
 
-
-    /**
-     * Allows players to reconnect to a game in progress.
-     * @param gameListener The game listener of the player who needs to reconnect.
-     * @param playerNickname The nickname of the player who needs to reconnect.
-     * @return The GameController of the game the player reconnected to.
-     * @throws RemoteException If there is an issue with remote communication.
-     */
-    public synchronized GameController reconnectToGame(GameListener gameListener, String playerNickname) throws RemoteException {
-        // Search for a game which has a player named playerNickname
+    public synchronized GameControllerInterface reconnectToGame(GameListener gameListener, String playerNickname) throws RemoteException {
         List<GameController> GCs = gameControllers.stream()
                 .filter(gc -> gc.getGame().getPlayers().stream()
                         .anyMatch(p -> p.getNickname().equals(playerNickname)))
                 .toList();
-        // If any player with playerNickname exists in some game
+
         if(!GCs.isEmpty()){
-            //If the player is actually offline
-            if(!GCs.getFirst().getGame().getPlayers().stream().filter(p->p.getNickname().equals(playerNickname)).toList().getFirst().getOnline()){
+            if(!GCs.get(0).getGame().getPlayers().stream().filter(p->p.getNickname().equals(playerNickname)).toList().get(0).getOnline()){
                 try {
-                    GCs.getFirst().reconnectPlayer(playerNickname, gameListener);
-                    GCs.getFirst().addListener(gameListener, GCs.getFirst().getGame().getPlayers().stream().filter(x->x.getNickname().equals(playerNickname)).findFirst().get());
+                    GCs.get(0).reconnectPlayer(playerNickname, gameListener);
+                    GCs.get(0).addListener(gameListener, GCs.get(0).getGame().getPlayers().stream().filter(x->x.getNickname().equals(playerNickname)).findFirst().get());
                 } catch (Exception e) {
                     throw new RuntimeException(e);
                 }
-                // Call the listener from the controller, it's not ideal but there aren't controls in the model for this
-                gameListener.playerReconnected(new GameImmutable(GCs.getFirst().getGame()), playerNickname);
-                return gameControllers.getFirst();
+                gameListener.playerReconnected(new GameImmutable(GCs.get(0).getGame()), playerNickname);
+                return GCs.get(0);
             }
         }
         return null;
     }
 
-
-    /**
-     * Deletes a game from the list of active games based on its ID.
-     * @param idGame The ID of the game to be deleted.
-     * @throws NoSuchGameException if no game with the given ID exists.
-     */
     public synchronized void deleteGame(int idGame) throws NoSuchGameException {
         List<GameController> gameToRemove = gameControllers.stream().filter(x -> (x.getGame().getIdGame() == idGame)).toList();
         if(!gameToRemove.isEmpty()){
-            gameControllers.remove(gameToRemove.getFirst());
+            gameControllers.remove(gameToRemove.get(0));
         } else {
             throw new NoSuchGameException();
         }
     }
 
-
-    /**
-     * Returns the list of game controllers currently managed by this MainController.
-     * @return A list of GameController instances.
-     */
     public List<GameController> getGameControllers() {
         return gameControllers;
     }
 
-
-    /**
-     * Resets the singleton instance of MainController, mainly used for testing purposes.
-     */
     public static void resetInstance() {
         instance = null;
     }
-
-
 }
